--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
 }
 
 .bakbak-one {
@@ -37,6 +36,10 @@ p {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+a{
+  text-decoration: none;
 }
 
 header {
