--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   --gradient-gray: linear-gradient(180deg, #ffffff 0%, #ffffffe0 100%);
   --gradient-green: linear-gradient(45deg, #21e786 0%, #21e786 100%);
   --gradient-black: linear-gradient(315deg, #040b11 52%, #040b11 73%);
-  --gradient-test: linear-gradient(180deg, #141b22 0%, #040b11 100%);
+  --gradient-hero: linear-gradient(180deg, #141b22 0%, #040b11 100%);
   /* Transparent */
   --transparent-green: #21e7861a;
   --transparent-gray-1: #ffffff1a;
@@ -62,6 +62,11 @@ body {
   font-family: "Bakbak One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow: auto;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 p {
@@ -102,7 +107,7 @@ header {
 .navbar li a {
   font-family: Bakbak One;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 24px;
   color: #ffffff;
   text-decoration: none;
@@ -115,7 +120,7 @@ header {
   align-items: center;
   gap: 16px;
   font-size: 32px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 42px;
   text-align: left;
 }
@@ -128,7 +133,7 @@ header {
   height: 48px;
   gap: 20px;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 24px;
   text-align: left;
 }
@@ -171,6 +176,11 @@ header {
   height: 48px;
 }
 
+/* Main tag*/
+main {
+  background-color: var(--back-black-1);
+}
+
 /* Hero Section */
 .main-container {
   width: 100%;
@@ -180,7 +190,7 @@ header {
   align-items: center;
   color: #ffffff;
   background-image: url("../imgs/hero-section-glow.svg"),
-    url("../imgs/background-hero-star.svg"), var(--gradient-test);
+    url("../imgs/background-hero-star.svg"), var(--gradient-hero);
   background-size: auto, auto, cover;
   background-position: 0 0, bottom right, center center;
   background-repeat: no-repeat;
@@ -201,7 +211,7 @@ header {
   width: 750px;
   height: 240px;
   font-size: 72px;
-  font-weight: 400;
+  font-weight: inherit;
   color: #ffffff;
   line-height: 80px;
   gap: 20px;
@@ -214,7 +224,7 @@ header {
 
 .main-text {
   font-size: 20px;
-  font-weight: 400;
+  font-weight: inherit;
   text-align: left;
   line-height: 30px;
   margin-top: 20px;
@@ -250,7 +260,7 @@ header {
 
 .item-num-subheading {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 26px;
   text-align: left;
   color: #c2c3c5;
@@ -273,7 +283,7 @@ header {
 
 .profiles-whitelist-subheading {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 26px;
   text-align: left;
   color: #c2c3c5;
@@ -290,7 +300,7 @@ header {
   padding: 12px 24px 12px 24px;
   gap: 8px;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: inherit;
   line-height: 24px;
   text-align: left;
   background-color: #21e786;
@@ -303,10 +313,164 @@ header {
   height: 46px;
   padding: 12px 24px 12px 24px;
   font-size: 16px;
-  font-weight: 400;
   line-height: 24px;
   text-align: left;
   color: #ffffff;
 }
 
 /* Products list section */
+.nft-card-container {
+  width: 100%;
+  height: max-content;
+  left: -105px;
+  display: grid;
+  overflow: hidden;
+}
+
+.nft-cards-list {
+  display: flex;
+  position: relative;
+  margin-top: 60px;
+  gap: 30px;
+  left: -105px;
+  list-style-type: none;
+}
+
+.nft-card {
+  background-color: var(--transparent-gray-2);
+  width: 330px;
+  display: grid;
+  height: 378px;
+}
+
+.nft-content-container {
+  padding: 20px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.nft-card a {
+  width: 290px;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: left;
+  color: #ffffff;
+}
+
+/* About us section */
+
+.about-content {
+  background-image: url("../imgs/about-back-star.svg");
+  background-position: bottom left;
+  height: 100%;
+  width: 100%;
+}
+
+.about-content-container {
+  width: 1410px;
+  height: 772px;
+  display: grid;
+  place-items: center;
+  margin: 0 auto;
+  color: #ffffff;
+}
+
+.about-text-container {
+  margin-top: 100px;
+  text-align: center;
+  width: 930px;
+  height: 156px;
+  display: grid;
+  gap: 16px;
+}
+
+.about-heading {
+  font-size: 44px;
+  font-weight: inherit;
+  line-height: 56px;
+}
+
+.about-text {
+  font-size: 18px;
+  font-weight: inherit;
+  line-height: 28px;
+  text-align: center;
+  color: #c2c3c5;
+}
+
+.about-cards {
+  margin-top: 60px;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 1170px;
+  height: 478px;
+  gap: 30px;
+}
+
+.about-card-item {
+  background-color: #141b22;
+  width: 570px;
+  height: 224px;
+  display: grid;
+  padding: 30px;
+}
+
+.about-card-item:nth-child(1) {
+  background-image: url("../imgs/about-top-glow.svg"),
+    url("../imgs/about-bottom-glow.svg");
+  background-position: top left, bottom right;
+  background-size: auto;
+  background-repeat: no-repeat;
+}
+
+.about-card-heading + p {
+  color: #c2c3c5;
+}
+
+.about-card-heading-container {
+  position: relative;
+  width: 100%;
+  height: 66px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.about-card-heading-container .about-card-number {
+  font-family: Bakbak One;
+  font-size: 80px;
+  line-height: 96px;
+  text-align: left;
+  width: max-content;
+  border: 1px solid #21e786;
+}
+
+.about-card-item h3 {
+  font-size: 24px;
+  font-weight: 400;
+  text-align: left;
+}
+
+.about-card-item p {
+  width: 510px;
+  height: 56px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  color: #c2c3c5;
+}
+
+.read-more-btn {
+  color: #ffffff;
+  width: max-content;
+  height: 48px;
+  padding: 12px 24px 12px 24px;
+  border: 2px solid #21e786;
+  margin-top: 30px;
+}
